Fixing wordlet visibility

--- a/demo/css/wordlets.css
+++ b/demo/css/wordlets.css
@@ -1,6 +1,8 @@
 [data-wordlet] {
     outline: 4px dotted rgba(255, 0, 0, .5) !important;
     outline-offset: -2px;
+    display: inherit;
+    min-height: 10px;
 }
 
 [data-wordlet]:hover {
